2020-04-26  Hidehisa Akiyama  <hidehisaakiyama@users.noreply.github.com>

	* rcsc/common/server_param.cpp:
	* rcsc/common/server_param.h:
	- illegal defense対応のパラメータとメソッドを追加

2019-08-06  Takuya Fukushima  <takuya.fukushima@kis.osakafu-u.ac.jp>

	* rcsc/player/world_model.cpp:
	- lastKicker更新時のバグを修正

2019-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_world_model.cpp:
	* rcsc/coach/coach_world_model.h:
	* rcsc/trainer/trainer_agent.cpp:
	- コーチのワールドモデル初期化時にチーム名をセットするように変更

2019-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_static.cpp:
	- フォーマット変換ツールのためにメソッド名を修正

2019-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_dt.h:
	* rcsc/formation/formation_static.cpp:
	* rcsc/formation/formation_static.h:
	* rcsc/formation/sample_data.cpp:
	* rcsc/formation/sample_data.h:
	- フォーメーションファイルのフォーマットをCSV形式に変更．旧版を読
	み書きする関数は別名で残す．

2019-05-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/Makefile.am:
	* rcsc/formation/formation.cpp:
	- DTとStatic以外のフォーメーションモデルをビルド対象から除外．

2019-05-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/action_effector.cpp:
	- フォウルを受けた場合のコマンドロストに対してデバッグメッセージを
	出力しないように変更．確認のために，キックのみファウルによ
	るコマンドロスト情報を出力する．

2018-11-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- fullstate使用時に敵チーム情報が更新されていなかった不具合を修正

2018-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_config.cpp:
	* rcsc/coach/coach_config.h:
	* rcsc/common/audio_codec.cpp:
	* rcsc/common/audio_codec.h:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	- AudioCodecに暗号化用シフトパラメータを追加
